--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@nuxt/eslint": "1.9.0",
+    "@tailwindcss/vite": "^4.1.15",
     "nuxt": "^4.1.3",
+    "tailwindcss": "^4.1.15",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
   },
@@ -28,5 +30,4 @@
   "lint-staged": {
     "*": "pnpm lint"
   }
-
 }
