--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,5 +50,12 @@
     "scss",
     "pcss",
     "postcss"
+  ],
+  "editor.quickSuggestions": {
+    "strings": "on"
+  },
+  "tailwindCSS.classAttributes": ["class", "ui"],
+  "tailwindCSS.experimental.classRegex": [
+    ["ui:\\s*{([^)]*)\\s*}", "(?:'|\"|`)([^']*)(?:'|\"|`)"]
   ]
 }
