--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "1.9.0",
+    "@nuxt/ui": "^4.0.1",
     "@tailwindcss/vite": "^4.1.15",
     "nuxt": "^4.1.3",
     "tailwindcss": "^4.1.15",
