--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@nuxt/ui": "^4.0.1",
     "@tailwindcss/vite": "^4.1.15",
     "nuxt": "^4.1.3",
+    "nuxt-vue3-google-signin": "0.0.13",
     "tailwindcss": "^4.1.15",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1",
